@@ -1,11 +1,11 @@
 package com.symphony.bdk.workflow.swadl.v1.activity.room;
 
+import com.symphony.bdk.workflow.swadl.v1.Variable;
 import com.symphony.bdk.workflow.swadl.v1.activity.BaseActivity;
 
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -15,5 +15,5 @@ import java.util.List;
 @Data
 public class DemoteRoomOwner extends BaseActivity {
   private String streamId;
-  private List<String> userIds = Collections.emptyList();
+  private Variable<List<Number>> userIds = Variable.value(List.of());
 }
